// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cypress Project < v7 --linter eslint should add eslint-plugin-cypress 1`] = `
Object {
  "extends": Array [
    "plugin:cypress/recommended",
    "../../.eslintrc.json",
  ],
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": Object {},
    },
    Object {
      "files": Array [
        "src/plugins/index.js",
      ],
      "rules": Object {
        "@typescript-eslint/no-var-requires": "off",
        "no-undef": "off",
      },
    },
  ],
}
`;

exports[`Cypress Project < v7 nested should update workspace.json 1`] = `
Object {
  "e2e": Object {
    "builder": "@nrwl/cypress:cypress",
    "configurations": Object {
      "production": Object {
        "devServerTarget": "my-dir-my-app:serve:production",
      },
    },
    "options": Object {
      "cypressConfig": "apps/my-dir/my-app-e2e/cypress.json",
      "devServerTarget": "my-dir-my-app:serve",
      "tsConfig": "apps/my-dir/my-app-e2e/tsconfig.json",
    },
  },
  "lint": Object {
    "builder": "@angular-devkit/build-angular:tslint",
    "options": Object {
      "exclude": Array [
        "**/node_modules/**",
        "!apps/my-dir/my-app-e2e/**/*",
      ],
      "tsConfig": Array [
        "apps/my-dir/my-app-e2e/tsconfig.json",
      ],
    },
  },
}
`;

exports[`Cypress Project < v7 project with directory in its name should set right path names in \`cypress.json\` 1`] = `
"{
  \\"fileServerFolder\\": \\".\\",
  \\"fixturesFolder\\": \\"./src/fixtures\\",
  \\"integrationFolder\\": \\"./src/integration\\",
  \\"modifyObstructiveCode\\": false,
  \\"supportFile\\": \\"./src/support/index.ts\\",
  \\"pluginsFile\\": \\"./src/plugins/index\\",
  \\"video\\": true,
  \\"videosFolder\\": \\"../../../dist/cypress/apps/my-dir/my-app-e2e/videos\\",
  \\"screenshotsFolder\\": \\"../../../dist/cypress/apps/my-dir/my-app-e2e/screenshots\\",
  \\"chromeWebSecurity\\": false
}
"
`;

exports[`Cypress Project < v7 project with directory in its name should update workspace.json 1`] = `
Object {
  "e2e": Object {
    "builder": "@nrwl/cypress:cypress",
    "configurations": Object {
      "production": Object {
        "devServerTarget": "my-dir-my-app:serve:production",
      },
    },
    "options": Object {
      "cypressConfig": "apps/my-dir/my-app-e2e/cypress.json",
      "devServerTarget": "my-dir-my-app:serve",
      "tsConfig": "apps/my-dir/my-app-e2e/tsconfig.json",
    },
  },
  "lint": Object {
    "builder": "@angular-devkit/build-angular:tslint",
    "options": Object {
      "exclude": Array [
        "**/node_modules/**",
        "!apps/my-dir/my-app-e2e/**/*",
      ],
      "tsConfig": Array [
        "apps/my-dir/my-app-e2e/tsconfig.json",
      ],
    },
  },
}
`;

exports[`Cypress Project < v7 should add update \`workspace.json\` file (baseUrl) 1`] = `
Object {
  "e2e": Object {
    "builder": "@nrwl/cypress:cypress",
    "options": Object {
      "baseUrl": "http://localhost:3000",
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": Object {
    "builder": "@angular-devkit/build-angular:tslint",
    "options": Object {
      "exclude": Array [
        "**/node_modules/**",
        "!apps/my-app-e2e/**/*",
      ],
      "tsConfig": Array [
        "apps/my-app-e2e/tsconfig.json",
      ],
    },
  },
}
`;

exports[`Cypress Project < v7 should add update \`workspace.json\` file 1`] = `
Object {
  "e2e": Object {
    "builder": "@nrwl/cypress:cypress",
    "configurations": Object {
      "production": Object {
        "devServerTarget": "my-app:serve:production",
      },
    },
    "options": Object {
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "devServerTarget": "my-app:serve",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": Object {
    "builder": "@angular-devkit/build-angular:tslint",
    "options": Object {
      "exclude": Array [
        "**/node_modules/**",
        "!apps/my-app-e2e/**/*",
      ],
      "tsConfig": Array [
        "apps/my-app-e2e/tsconfig.json",
      ],
    },
  },
}
`;

exports[`Cypress Project < v7 should add update \`workspace.json\` file for a project with a defaultConfiguration 1`] = `
Object {
  "e2e": Object {
    "builder": "@nrwl/cypress:cypress",
    "configurations": Object {
      "production": Object {
        "devServerTarget": "my-app:serve:production",
      },
    },
    "options": Object {
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "devServerTarget": "my-app:serve:development",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": Object {
    "builder": "@angular-devkit/build-angular:tslint",
    "options": Object {
      "exclude": Array [
        "**/node_modules/**",
        "!apps/my-app-e2e/**/*",
      ],
      "tsConfig": Array [
        "apps/my-app-e2e/tsconfig.json",
      ],
    },
  },
}
`;

exports[`Cypress Project > v10 nested should set right path names in \`cypress.config.ts\` 1`] = `
"import { defineConfig } from 'cypress';

export default defineConfig({
  e2e: {
    fileServerFolder: '.',
    fixturesFolder: './src/fixtures',
    integrationFolder: './src/e2e',
    supportFile: './src/support/e2e.ts',
    specPattern: './src/**/*.cy.{js, ts}',
    pluginsFile: false,
    video: true,
    videosFolder: '../../../dist/cypress/apps/my-dir/my-app-e2e/videos',
    screenshotsFolder:
      '../../../dist/cypress/apps/my-dir/my-app-e2e/screenshots',
    chromeWebSecurity: false,
  },
});
"
`;

exports[`Cypress Project > v10 nested should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "cypress",
      "node",
    ],
  },
  "extends": "../../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
  ],
}
`;

exports[`Cypress Project > v10 should add update \`workspace.json\` file properly when eslint is passed 1`] = `
Object {
  "builder": "@nrwl/linter:eslint",
  "options": Object {
    "lintFilePatterns": Array [
      "apps/my-app-e2e/**/*.{js,ts}",
    ],
  },
  "outputs": Array [
    "{options.outputFile}",
  ],
}
`;

exports[`Cypress Project > v10 should set right path names in \`cypress.config.ts\` 1`] = `
"import { defineConfig } from 'cypress';

export default defineConfig({
  e2e: {
    fileServerFolder: '.',
    fixturesFolder: './src/fixtures',
    integrationFolder: './src/e2e',
    supportFile: './src/support/e2e.ts',
    specPattern: './src/**/*.cy.{js, ts}',
    pluginsFile: false,
    video: true,
    videosFolder: '../../dist/cypress/apps/my-app-e2e/videos',
    screenshotsFolder:
      '../../dist/cypress/apps/my-app-e2e/screenshots',
    chromeWebSecurity: false,
  },
});
"
`;

exports[`Cypress Project > v10 should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "cypress",
      "node",
    ],
  },
  "extends": "../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
  ],
}
`;
